--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
     </div>
 </div>
 
+<!-- The Data Readout -->
 <div>
     <h2 class="text-3xl font-vt323 text-green-400 mb-4">[[ The Data Readout ]]</h2>
     <p class="mb-6">
@@ -409,6 +410,22 @@
         </div>
     </dl>
 </div>
+
+<!-- Special Thanks -->
+<div>
+    <h2 class="text-3xl font-vt323 text-green-400 mb-4 mt-10">[[ Special Thanks ]]</h2>
+    <p class="mb-6">
+        This tool stands on the shoulders of giants. The concepts of sensory dissonance explored here were pioneered in the following essential research and resources:
+    </p>
+    <ul class="list-disc list-inside space-y-2 text-base">
+        <li><a href="https://link.springer.com/book/10.1007/b138848" target="_blank" class="text-teal-300 hover:text-yellow-300">Tuning, Timbre, Spectrum, Scale (Sethares, 2005)</a></li>
+        <li><a href="https://pubs.aip.org/asa/jasa/article-abstract/38/4/548/615274/Tonal-Consonance-and-Critical-Bandwidth?redirectedFrom=fulltext" target="_blank" class="text-teal-300 hover:text-yellow-300">Tonal Consonance and Critical Bandwidth (Plomp & Levelt, 1965)</a></li>
+        <li><a href="https://aatishb.com/dissonance/" target="_blank" class="text-teal-300 hover:text-yellow-300">Dissonance: A Journey Through Musical Possibility Space</a></li>
+        <li><a href="https://sethares.engr.wisc.edu/consemi.html" target="_blank" class="text-teal-300 hover:text-yellow-300">Sethares' Consonance Theory</a></li>
+        <li><a href="https://www.sfu.ca/sonic-studio-webdav/handbook/Consonance.html" target="_blank" class="text-teal-300 hover:text-yellow-300">SFU Sonic Studio Handbook on Consonance</a></li>
+        <li><a href="https://www.pharmacy180.com/article/sense-of-hearing-3587/" target="_blank" class="text-teal-300 hover:text-yellow-300">The Sense of Hearing and Critical Bands</a></li>
+        <li><a href="https://www.youtube.com/watch?v=tCsl6ZcY9ag" target="_blank" class="text-teal-300 hover:text-yellow-300">minutephysics 'The Physics Of Dissonance'</a></li>
+    </ul>
 </div>
 
 
