--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     <dd>The higher pitched, hidden tones that give a sound its character. More overtones create a richer sound and a more complex graph (zero overtones is a pure sine wave).</dd>
 
     <dt class="text-cyan-300 font-semibold text-right">Octaves:</dt>
-    <dd>The range of notes to display on the graph's axes, from one octave up to four.</dd>
+    <dd>The range of notes to display on the graph's axes, from one octave up to four. Recommended: 1 or 2.</dd>
 
     <dt class="text-cyan-300 font-semibold text-right">Dissonance Model:</dt>
     <dd>The equation used to calculate roughness. <strong>Sethares</strong> is the standard model. <strong>Dillon</strong> is more sensitive and amplifies the harshest-sounding frequency interactions.</dd>
