--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@
         <div class="grid md:grid-cols-2 gap-6 items-center">
             <div>
                 <h4 class="text-xl font-vt323 text-yellow-300">Line Curve</h4>
-                <p><strong>In a nutshell:</strong> Valleys are harmonious intervals. The x-axis is the pitch relationship of the 2nd tone to the base frequency. The y-axis is the amount of dissonance or 'roughness' of the combined tones. The shape of this curve changes as overtones increase/decrease in number and in strength. The dots on the curve represent commonly used intervals in music (e.g., perfect fifth) - different tunings put the dot in different places. In other words - there is more than one way to tune an instrument. </p>
+                <p><strong>In a nutshell:</strong> Valleys are harmonious intervals. The x-axis is the pitch relationship of the 2nd tone to the base frequency. The y-axis is the amount of dissonance or 'roughness' of the combined tones. The shape of this curve changes as overtones increase/decrease in number and in strength.</p>
+		<p> The <strong>dots</strong> on the curve represent commonly used intervals in music (e.g., perfect fifth) - different tunings place the dot in different places. In other words - there is more than one way to tune an instrument. </p>
             </div>
             <img src="line-curve.jpg" alt="Line Curve Chart Screenshot" class="border border-teal-500 rounded">
         </div>
@@ -353,7 +354,7 @@
             <img src="2d-heatmap.jpg" alt="2D Heatmap Chart Screenshot" class="border border-teal-500 rounded">
             <div>
                  <h4 class="text-xl font-vt323 text-yellow-300">2D Heatmap</h4>
-                <p><strong>In a nutshell:</strong> A top-down view of the 3D surface. The faint light streaks are your "highways of harmony." These "roads" are directly influenced by the number and strength of overtones. </p>
+                <p><strong>In a nutshell:</strong> A top-down view of the 3D surface. The faint light streaks are your "highways to harmony." These "roads" are directly influenced by the number and strength of overtones. Different tuning methods will place these dots on different parts along these pathways. </p>
             </div>
         </div>
     </div>
