--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             <div>
                 <h4 class="text-xl font-vt323 text-yellow-300">Line Curve</h4>
                 <p><strong>In a nutshell:</strong> Valleys are harmonious intervals. The x-axis is the pitch relationship of the 2nd tone to the base frequency. The y-axis is the amount of dissonance or 'roughness' of the combined tones. The shape of this curve changes as overtones increase/decrease in number and in strength.</p>
-		<p> The <strong>dots</strong> on the curve represent commonly used intervals in music (e.g., perfect fifth) - different tunings place the dot in different places. In other words - there is more than one way to tune an instrument. Despite the different tuning methods, notice how the dots tend to fall more in valleys than peaks. </p>
+		<p> The <strong>dots</strong> on the curve represent commonly used intervals in music (e.g., perfect fifth) - different tunings place the dot in different places. In other words - there is more than one way to tune an instrument. Despite the different tuning methods, notice how the dots tend to fall more in valleys than peaks. This is where 'notes', the building blocks of music, come from - the valleys of consonance. </p>
             </div>
             <img src="line-curve.jpg" alt="Line Curve Chart Screenshot" class="border border-teal-500 rounded">
         </div>
