--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             <img src="2d-heatmap.jpg" alt="2D Heatmap Chart Screenshot" class="border border-teal-500 rounded">
             <div>
                  <h4 class="text-xl font-vt323 text-yellow-300">2D Heatmap</h4>
-                <p><strong>In a nutshell:</strong> A top-down view of the 3D surface. The faint light streaks are your "highways to harmony." These "roads" are directly influenced by the number and strength of overtones. Different tuning methods will place these dots on different parts along these pathways. </p>
+                <p><strong>In a nutshell:</strong> A top-down view of the 3D surface. The faint light streaks are your "highways to harmony." These "roads" are directly influenced by the number and strength of overtones. Different tuning methods will place these dots on different parts along these pathways and intersections. </p>
             </div>
         </div>
     </div>
