--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
         <div class="grid md:grid-cols-2 gap-6 items-center">
             <div>
                 <h4 class="text-xl font-vt323 text-yellow-300">Line Curve</h4>
-                <p><strong>In a nutshell:</strong> Valleys are harmonious intervals. The x-axis is the pitch relationship of the 2nd tone to the base frequency. The y-axis is the amount of dissonance or 'roughness' of the combined tones. The shape of this curve changes as overtones increase/decrease in number and in strength.</p>
-		<p> The <strong>dots</strong> on the curve represent commonly used intervals in music (e.g., perfect fifth) - different tunings place the dot in different places. In other words - there is more than one way to tune an instrument. Despite the different tuning methods, notice how the dots tend to fall more in valleys than peaks. This is where 'notes', the building blocks of music, come from - the valleys of consonance. </p>
+                <p><strong>In a nutshell:</strong> Valleys are harmonious intervals (an interval is a combination of two notes/frequencies). The x-axis is the pitch relationship of the 2nd tone to the base frequency. The y-axis is the amount of dissonance or 'roughness' of the combined tones. The shape of this curve changes as overtones increase/decrease in number and in strength.</p>
+		<p> The <strong>labeled dots</strong> on the curve represent commonly used intervals in music (e.g., perfect fifth) - different tunings place the dot in different places. In other words - there is more than one way to tune an instrument. Despite the different tuning methods, notice how the dots tend to fall more in valleys than peaks. This is where 'notes', the building blocks of music, come from - the valleys of consonance. </p>
             </div>
             <img src="line-curve.jpg" alt="Line Curve Chart Screenshot" class="border border-teal-500 rounded">
         </div>
@@ -346,7 +346,7 @@
           <div class="grid md:grid-cols-2 gap-6 items-center">
             <div>
                 <h4 class="text-xl font-vt323 text-yellow-300">3D Surface</h4>
-                <p><strong>In a nutshell:</strong> A landscape of harmony. The deep blue "canyons" are stable chords like Major and Minor. Notice how most chords typically correspond to different valleys. </p>
+                <p><strong>In a nutshell:</strong> A landscape of harmony from chords (a combination of three or more notes/frequencies). The deep blue "canyons" are stable chords like Major and Minor. Notice how most the <strong>labeled dots</strong> (chords) typically correspond to different valleys. </p>
             </div>
             <img src="3d-surface.jpg" alt="3D Surface Chart Screenshot" class="border border-teal-500 rounded">
         </div>
@@ -354,7 +354,7 @@
             <img src="2d-heatmap.jpg" alt="2D Heatmap Chart Screenshot" class="border border-teal-500 rounded">
             <div>
                  <h4 class="text-xl font-vt323 text-yellow-300">2D Heatmap</h4>
-                <p><strong>In a nutshell:</strong> A top-down view of the 3D surface. The faint light streaks are your "highways to harmony." These "roads" are directly influenced by the number and strength of overtones. Different tuning methods will place these dots on different parts along these pathways and intersections. </p>
+                <p><strong>In a nutshell:</strong> A top-down view of the 3D surface. The faint light streaks are your "highways to harmony." These "roads" are directly influenced by the number and strength of overtones. Different tuning methods will place the <strong>labeled dots</strong> on different parts along these pathways and intersections. </p>
             </div>
         </div>
     </div>
@@ -364,7 +364,7 @@
         <div class="grid md:grid-cols-2 gap-6 items-center">
             <div>
                 <h4 class="text-xl font-vt323 text-yellow-300">3D Scatter</h4>
-                <p><strong>In a nutshell:</strong> A 4D model where each axis is a note. The size and color of the dots show the harmony of the chord—bigger, bluer dots are more consonant.</p>
+                <p><strong>In a nutshell:</strong> A 4D model where the x, y, and z axis represent the the interval between the base note and the second, third, and fourth notes of a chord. The size and color of the <strong>labeled dots</strong> show the harmony of the chord—bigger, bluer dots are more consonant.</p>
             </div>
             <img src="3d-scatter.jpg" alt="3D Scatter Chart Screenshot" class="border border-teal-500 rounded">
         </div>
