--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     <!-- Introduction -->
     <div>
         <h2 class="text-3xl font-vt323 text-green-400 mb-3">[[ What Is This? ]]</h2>
-        <p>This interactive graph visualizes <strong class="text-yellow-300">musical harmony</strong>-the science of why some notes sound better together.</p>
+        <p>This interactive graph visualizes <strong class="text-yellow-300">musical harmony</strong>-the science of why some notes sound better together. Heaphones are recommended!</p>
 		<ul class="list-disc list-inside space-y-2 mt-4">
                                 <li>The <span class="text-blue-400">cool-colored</span> "valleys" on the graphs show you which note combinations sound pleasant, or <strong>consonant</strong>.</li>
                                 <li>The <span class="text-red-400">warm-colored</span> "peaks" show which combinations sound less pleasant, or <strong>dissonant</strong>.</li></p>
