--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <img src="polar-area.jpg" alt="Polar Area Chart Screenshot" class="border border-teal-500 rounded">
             <div>
                 <h4 class="text-xl font-vt323 text-yellow-300">Polar Area</h4>
-                <p><strong>In a nutshell:</strong> The same data wrapped in a circle. Closer to the center is more harmonious. Different tuning methods give you a different "ticks" to the "musical clock" or scale. Notice how some tuning methods have more equal spacing than others, making it easier/harder to place music in different "keys" (base frequencies). Most music today uses 12-TET due to the ability to change keys (base frequencies) without needing to retune the instrument, but that was not always the case. </p>
+                <p><strong>In a nutshell:</strong> The same data wrapped in a circle. Closer to the center is more harmonious. Different tuning methods give you a different "ticks" to the "musical clock" or scale. Notice how some tuning methods have more equal spacing than others, making it easier/harder to place music in different "keys" (base frequencies), but at the cost of consonance. Most music today uses 12-TET due to the ability to change keys (base frequencies) without needing to retune the instrument, but that was not always the case. </p>
             </div>
         </div>
     </div>
