--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <dt class="text-yellow-300 font-semibold text-right">Chart Type:</dt>
     <dd>Selects how the data is visualized. Each <strong>Tone</strong> setting offers two different chart types to view the same data from a new perspective. See below for more.</dd>
 </dl>
-		<p>You can also edit up to 12 individual overtones using the 'Overtone Strength' window </p>
+<p class="mt-4">You can also edit up to 12 individual overtones using the 'Overtone Strength' window.</p>
     </div>
 
     <!-- Interpreting the Graphs -->
