--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </div>
 
         <!-- Music Visualization Page -->
-        <div id="music-page" class="hidden min-h-screen bg-gray-900 p-4 md:p-8 relative flex flex-col">
+        <div id="music-page" class="hidden min-h-screen starry-background p-4 md:p-8 flex flex-col">
             <div class="container mx-auto flex flex-col flex-grow">
                 <header class="flex justify-between items-center mb-4 flex-shrink-0">
                     <h1 class="text-4xl md:text-6xl font-vt323 text-teal-300">Music Dissonance</h1>
@@ -243,7 +243,7 @@
             </div>
         </div>
         <!-- Standard Model Page -->
-        <div id="physics-page" class="hidden min-h-screen bg-gray-900 p-4 md:p-8 relative flex flex-col">
+        <div id="physics-page" class="hidden min-h-screen starry-background p-4 md:p-8 flex flex-col">
             <div class="container mx-auto flex flex-col flex-grow">
                 <header class="flex justify-between items-center mb-4 flex-shrink-0">
                     <h1 class="text-4xl md:text-6xl font-vt323 text-teal-300">Quantum Physics</h1>
@@ -279,7 +279,7 @@
     <!-- Introduction -->
     <div>
         <h2 class="text-3xl font-vt323 text-green-400 mb-3">[[ What Is This? ]]</h2>
-        <p>This interactive graph visualizes <strong class="text-yellow-300">musical harmony</strong>-the science of why some notes sound better together than others. Heaphones are recommended!</p>
+        <p>This interactive graph visualizes <strong class="text-yellow-300">musical harmony</strong>-the science of why some notes sound better together. Heaphones are recommended!</p>
 		<ul class="list-disc list-inside space-y-2 mt-4">
                                 <li>The <span class="text-blue-400">cool-colored</span> "valleys" on the graphs show you which note combinations sound pleasant, or <strong>consonant</strong>.</li>
                                 <li>The <span class="text-red-400">warm-colored</span> "peaks" show which combinations sound less pleasant, or <strong>dissonant</strong>.</li></p>
