--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <div id="how-it-works-color-page" class="hidden min-h-screen starry-background p-4 md:p-8 flex flex-col">
             <div class="container mx-auto flex flex-col flex-grow">
                <header class="flex justify-between items-center mb-4 flex-shrink-0">
-                   <h1 class="text-4xl md:text-6xl font-vt323 text-yellow-300 flicker-animation">How The Color-Tron Works</h1>
+                   <h1 class="text-4xl md:text-6xl font-vt323 text-yellow-300 flicker-animation">How It All Works</h1>
                    <button id="back-to-color-button" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg pixel-border transition-colors">< Back to Visualizer</button>
                </header>
                <main class="bg-black bg-opacity-50 p-6 rounded-lg border-2 border-cyan-400 flex-grow text-white">
@@ -518,7 +518,7 @@
 <div id="how-it-works-physics-page" class="hidden min-h-screen starry-background p-4 md:p-8 flex flex-col">
     <div class="container mx-auto flex flex-col flex-grow">
        <header class="flex justify-between items-center mb-4 flex-shrink-0">
-           <h1 class="text-4xl md:text-6xl font-vt323 text-yellow-300 flicker-animation">How It Works</h1>
+           <h1 class="text-4xl md:text-6xl font-vt323 text-yellow-300 flicker-animation">How It All Works</h1>
            <button id="back-to-physics-button" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg pixel-border transition-colors">< Back to Model</button>
        </header>
        <main class="bg-black bg-opacity-50 p-6 rounded-lg border-2 border-cyan-400 flex-grow text-white">
