--- a/Color Wheel | Gemini 2.5 Output v0.6.html
+++ b/Color Wheel | Gemini 2.5 Output v0.6.html
@@ -1716,12 +1716,25 @@
 ];
 
             const transitData = [
-{ name: "NYC Subway", colors: ["#0039A6", "#00933C", "#00ADD0", "#6CBE45", "#808183", "#996633", "#A7A9AC", "#B933AD", "#EE352E", "#FCCC0A", "#FF6319"], type: 'Subway', country: 'USA', established: null },
-{ name: "London Underground", colors: ["#000000", "#003688", "#00782A", "#0098D4", "#00A4A7", "#6950a1", "#84B817", "#95CDBA", "#9B0056", "#A0A5A9", "#B36305", "#E32017"], type: 'Subway', country: 'UK', established: null },
-{ name: "Tokyo Metro", colors: ["#009BBF", "#00AC9B", "#00BB85", "#8F76D6", "#9C5E31", "#B5B5AC", "#C1A470", "#F33155", "#FF9500"], type: 'Subway', country: 'Japan', established: null },
-{ name: "Chicago L", colors: ["#009b3a", "#00a1de", "#522398", "#62361b", "#c60c30", "#e27ea6", "#f9461c", "#f9e300"], type: 'Subway', country: 'USA', established: null },
-{ name: "Delhi Metro", colors: ["#20B2AA", "#4169E1", "#553592", "#838996", "#CC338B", "#FC8EAC", "#FF4040", "#FF8C00", "#FFDF00", "#bf9723"], type: 'Subway', country: 'India', established: null },
-{ name: "Seoul Subway", colors: ["#0052A4", "#00A4E3", "#00A84D", "#747F00", "#996CAC", "#CD7C2F", "#EF7C1C"], type: 'Subway', country: 'South Korea', established: null }
+{ name: "BART (SF)", colors: ["#00aeef", "#4db848", "#b0bdc6", "#ed1c24", "#faa61a", "#ffe800"], type: 'Rapid Transit', country: 'USA', established: null },
+    { name: "Beijing Subway", colors: ["#0049A5", "#004B87", "#008C95", "#0092BC", "#009B77", "#653279", "#97D700", "#A192B2", "#A4343A", "#AA0061", "#B58500", "#D0006F", "#D86018", "#D986BA", "#F4DA40", "#FFC56E"], type: 'Subway', country: 'China', established: null },
+    { name: "Chicago L", colors: ["#009b3a", "#00a1de", "#522398", "#62361b", "#c60c30", "#e27ea6", "#f9461c", "#f9e300"], type: 'Subway', country: 'USA', established: null },
+    { name: "Delhi Metro", colors: ["#20B2AA", "#4169E1", "#553592", "#838996", "#CC338B", "#FC8EAC", "#FF4040", "#FF8C00", "#FFDF00", "#bf9723"], type: 'Subway', country: 'India', established: null },
+    { name: "Guangzhou Metro", colors: ["#00629b", "#00843d", "#008c95", "#00b5e2", "#80225f", "#97d700", "#c4d600", "#c5003e", "#eca154", "#f3d03e"], type: 'Subway', country: 'China', established: null },
+    { name: "LACMTA (LA)", colors: ["#0072bc", "#58a738", "#a05da5", "#e3131b", "#e96bb0", "#f7b618"], type: 'Mixed Transit', country: 'USA', established: null },
+    { name: "London Underground", colors: ["#000000", "#003688", "#00782A", "#0098D4", "#00A4A7", "#6950a1", "#84B817", "#95CDBA", "#9B0056", "#A0A5A9", "#B36305", "#E32017", "#EE7C0E", "#F3A9BB", "#FFD300"], type: 'Subway', country: 'UK', established: null },
+    { name: "MARTA (Atlanta)", colors: ["#009E4A", "#0476B3", "#2E3192", "#CF232D", "#D5A72B"], type: 'Subway', country: 'USA', established: null },
+    { name: "Madrid Metro", colors: ["#008b43", "#084594", "#0e4a97", "#30a3dc", "#944248", "#96bf0d", "#a0a5a7", "#a49a00", "#a93094", "#cd031d", "#f27ca2", "#faa64a", "#ffe114"], type: 'Subway', country: 'Spain', established: null },
+    { name: "Miami Metrorail", colors: ["#0B58AF", "#3AC2EE", "#9DD165", "#FE4D1A", "#FFB638"], type: 'Mixed Transit', country: 'USA', established: null },
+    { name: "Moscow Metro", colors: ["#0078BF", "#19C1F3", "#44B85C", "#79CDCD", "#894E35", "#8E479C", "#D92B2C", "#EE2722", "#F58631"], type: 'Subway', country: 'Russia', established: null },
+    { name: "NYC Subway", colors: ["#0039A6", "#00933C", "#00ADD0", "#6CBE45", "#808183", "#996633", "#A7A9AC", "#B933AD", "#EE352E", "#FCCC0A", "#FF6319"], type: 'Subway', country: 'USA', established: null },
+    { name: "PATH (NY/NJ)", colors: ["#0082c6", "#009e58", "#ef3941", "#fdb827"], type: 'Subway', country: 'USA', established: null },
+    { name: "SEPTA (Philly)", colors: ["#0078C8", "#00843D", "#6A2E8B", "#A8192E", "#F36D25", "#F7A700"], type: 'Mixed Transit', country: 'USA', established: null },
+    { name: "Seoul Subway", colors: ["#0052A4", "#0090D2", "#00A4E3", "#00A84D", "#747F00", "#996CAC", "#BDB092", "#CD7C2F", "#D31145", "#E6186C", "#EF7C1C", "#FABE00"], type: 'Subway', country: 'South Korea', established: null },
+    { name: "Shanghai Metro", colors: ["#007a60", "#0094d8", "#461d84", "#871c2b", "#87caed", "#8cc220", "#944d9a", "#c6afd4", "#d40068", "#e3002b", "#e999c0", "#ed6f00", "#fcd600"], type: 'Subway', country: 'China', established: null },
+    { name: "Tokyo Metro", colors: ["#009BBF", "#00AC9B", "#00BB85", "#8F76D6", "#9C5E31", "#B5B5AC", "#C1A470", "#F33155", "#FF9500"], type: 'Subway', country: 'Japan', established: null },
+    { name: "Washington Metro", colors: ["#0fab4b", "#1574c4", "#9d9f9c", "#e51636", "#f68712", "#fcd006"], type: 'Subway', country: 'USA', established: null },
+    { name: "Wuhan Metro", colors: ["#0067a1", "#007128", "#a43034", "#a6d30b", "#b2007b", "#d3b466", "#eb7c16", "#ec9cbb", "#f6d300"], type: 'Subway', country: 'China', established: null }
 ];
 
             const stateFlagData = [
@@ -3204,3 +3217,4 @@
     </script>
 </body>
 </html>
+
