Update Color Wheel | Gemini 2.5 Output v0.6.html

--- a/Color Wheel | Gemini 2.5 Output v0.6.html
+++ b/Color Wheel | Gemini 2.5 Output v0.6.html
@@ -2887,6 +2887,7 @@ const sportsData = [
                 const league = c.status;
                 if (['NFL'].includes(league)) return 'American Football';
                 if (['NBA'].includes(league)) return 'Basketball';
+                if (['WNBA'].includes(league)) return 'Women\'s Basketball';
                 if (['MLB'].includes(league)) return 'Baseball';
                 if (['NHL'].includes(league)) return 'Ice Hockey';
                 if (['MLS', 'EPL', 'La Liga', 'Serie A', 'Bundesliga', 'Ligue 1'].includes(league)) return 'Soccer';
