Update Color Wheel | Gemini 2.5 Output v0.6.html

--- a/Color Wheel | Gemini 2.5 Output v0.6.html
+++ b/Color Wheel | Gemini 2.5 Output v0.6.html
@@ -1730,7 +1730,7 @@ const sportsData = [
 ];
 
             const transitData = [
-{ name: "BART (SF)", colors: ["#00aeef", "#4db848", "#b0bdc6", "#ed1c24", "#faa61a", "#ffe800"], type: 'Rapid Transit', country: 'USA', established: null },
+    { name: "BART (SF)", colors: ["#00aeef", "#4db848", "#b0bdc6", "#ed1c24", "#faa61a", "#ffe800"], type: 'Rapid Transit', country: 'USA', established: null },
     { name: "Beijing Subway", colors: ["#0049A5", "#004B87", "#008C95", "#0092BC", "#009B77", "#653279", "#97D700", "#A192B2", "#A4343A", "#AA0061", "#B58500", "#D0006F", "#D86018", "#D986BA", "#F4DA40", "#FFC56E"], type: 'Subway', country: 'China', established: null },
     { name: "Chicago L", colors: ["#009b3a", "#00a1de", "#522398", "#62361b", "#c60c30", "#e27ea6", "#f9461c", "#f9e300"], type: 'Subway', country: 'USA', established: null },
     { name: "Delhi Metro", colors: ["#20B2AA", "#4169E1", "#553592", "#838996", "#CC338B", "#FC8EAC", "#FF4040", "#FF8C00", "#FFDF00", "#bf9723"], type: 'Subway', country: 'India', established: null },
@@ -1739,6 +1739,10 @@ const sportsData = [
     { name: "London Underground", colors: ["#000000", "#003688", "#00782A", "#0098D4", "#00A4A7", "#6950a1", "#84B817", "#95CDBA", "#9B0056", "#A0A5A9", "#B36305", "#E32017", "#EE7C0E", "#F3A9BB", "#FFD300"], type: 'Subway', country: 'UK', established: null },
     { name: "MARTA (Atlanta)", colors: ["#009E4A", "#0476B3", "#2E3192", "#CF232D", "#D5A72B"], type: 'Subway', country: 'USA', established: null },
     { name: "Madrid Metro", colors: ["#008b43", "#084594", "#0e4a97", "#30a3dc", "#944248", "#96bf0d", "#a0a5a7", "#a49a00", "#a93094", "#cd031d", "#f27ca2", "#faa64a", "#ffe114"], type: 'Subway', country: 'Spain', established: null },
+
+    // NEW — Boston MBTA (“The T”)
+    { name: "MBTA (Boston 'T')", colors: ["#003DA5", "#00843D", "#ED8B00", "#DA291C", "#7C878E", "#80276C", "#FFC72C"], type: 'Mixed Transit', country: 'USA', established: null },
+
     { name: "Miami Metrorail", colors: ["#0B58AF", "#3AC2EE", "#9DD165", "#FE4D1A", "#FFB638"], type: 'Mixed Transit', country: 'USA', established: null },
     { name: "Moscow Metro", colors: ["#0078BF", "#19C1F3", "#44B85C", "#79CDCD", "#894E35", "#8E479C", "#D92B2C", "#EE2722", "#F58631"], type: 'Subway', country: 'Russia', established: null },
     { name: "NYC Subway", colors: ["#0039A6", "#00933C", "#00ADD0", "#6CBE45", "#808183", "#996633", "#A7A9AC", "#B933AD", "#EE352E", "#FCCC0A", "#FF6319"], type: 'Subway', country: 'USA', established: null },
@@ -1750,6 +1754,7 @@ const sportsData = [
     { name: "Washington Metro", colors: ["#0fab4b", "#1574c4", "#9d9f9c", "#e51636", "#f68712", "#fcd006"], type: 'Subway', country: 'USA', established: null },
     { name: "Wuhan Metro", colors: ["#0067a1", "#007128", "#a43034", "#a6d30b", "#b2007b", "#d3b466", "#eb7c16", "#ec9cbb", "#f6d300"], type: 'Subway', country: 'China', established: null }
 ];
+
 
             const stateFlagData = [
 { name: 'Alabama', colors: ['#B10021', '#FFFFFF'], established: 1819, region: 'South' },
